tests/outref/TERR009.ref
Error with syntax near (line 1, column 2):

  !;
  ^
syntax error, unexpected EXCLAMATION

[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: !;

